dont close view settings when Alternatives shown

--this way the user can also choose different Alternatives
without having false applets replacements or Latte failing

BUG: 403658